# OpenMpiATSP

./: .env  README.md  docker-compose.yml  endpoints.yml
backend/: .gitignore  Dockerfile  init.sh  requirements.txt  test.py
backend/backend/: settings.py  urls.py
backend/jobs/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/jobs/management/commands/: init_rabbit.py
backend/jobs/migrations/: 0001_initial.py  0002_alter_job_publication_date.py  0003_auto_20210511_1329.py  0004_alter_job_user.py  0005_alter_job_output.py  0006_rename_status_job_status_short.py
backend/userauth/: serializers.py  urls.py
cluster/: CMakeLists.txt  Dockerfile  worker.py
cluster/data/: m3.tsp  m4.tsp
cluster/include/: Array.h  MpiHelper.h
cluster/src/: Matrix.cpp  MpiHelper.cpp  main.cpp
frontend/: Dockerfile  package-lock.json
include/: List.h  Matrix.h
queue/: .gitignore  Dockerfile  cluster_mock.py  publisher.py  worker.py
src/: Array.cpp  List.cpp
